--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="LaluPrasad - ECommerce"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/profile.png?v=2" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobileNumber device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>LaluPrasad - ECommerce</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
